--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Jeanette Pettibone
 description: "Describe this nonsense."
 tags: [JavaScript, Web Development, Software Development, Full Stack, blog]
 image:
-  feature: corememory.jpg
+  feature: corememory3.jpg
   <!--feature: abstract-4.jpg-->
   <!--credit: dargadgetz-->
   <!--creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/-->
