changes to the tags

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: post-index
 title: Jeanette Pettibone
 description: "Describe this nonsense."
-tags: [JavaScript, Web Development, Software Development, Full Stack, blog]
+tags: [JavaScript, Software Engineering, Full Stack, blog]
 image:
   feature: corememory3.jpg
   <!--feature: abstract-4.jpg-->
